package CreateBatchAndFill

type Command struct {
	TaskUuid string
}
